--- a/references.bib
+++ b/references.bib
@@ -1923,7 +1923,7 @@ address = "New York"
 
 @article{lele07,
 author = {Lele, Subhash R. and Dennis, Brian and Lutscher, Frithjof},
-title = {Data cloning: easy maximum likelihood estimation for complex ecological models using Bayesian Markov chain Monte Carlo methods},
+title = {Data cloning: easy maximum likelihood estimation for complex ecological models using {B}ayesian {M}arkov chain {M}onte {C}arlo methods},
 journal = {Ecology Letters},
 volume = {10},
 number = {7},
@@ -2397,7 +2397,7 @@ volume = {pre-published online}
 % PPPPPPPPPPPPPPPP
 
 @misc{PAHO23,
-  title = {Cholera Epidemic in Hispaniola 2023 - Situation Report 19},
+  title = {Cholera Epidemic in {H}ispaniola 2023 - Situation Report 19},
   author = {{Pan American Health Organization}},
   year = {2023},
   url = {https://www.paho.org/en/documents/cholera-outbreak-hispaniola-2023-situation-report-19}
@@ -3029,7 +3029,7 @@ ISSN={1053-587X} }
 % TTTTTTTTTTTTTTT
 
 @misc{tan24,
-      title={Accelerated Inference for Partially Observed Markov Processes using Automatic Differentiation}, 
+      title={Accelerated Inference for Partially Observed {M}arkov Processes using Automatic Differentiation}, 
       author={Kevin Tan and Giles Hooker and Edward L. Ionides},
       year={2024},
       eprint={2407.03085},
@@ -3089,7 +3089,8 @@ eprint = {https://doi.org/10.1146/annurev-publhealth-040617-014317}
   title={With {UNICEF} support, {H}aiti kickstarts campaign to immunize about 1.7 million people against cholera},
   author = {{UNICEF}},
   year = {2022},
-  url = {https://www.unicef.org/lac/en/press-releases/with-unicef-support-haiti-kickstarts-campaign-to-immunize-about-1.7-million-people-against-cholera}
+  url = {https://www.unicef.org/lac/en/press-releases/with-unicef-support-haiti-kickstarts-campaign-to-immunize-about-1.7-million-people-against-cholera},
+  howpublished = {https://www.unicef.org/lac/en/press-releases/with-unicef-support-haiti-kickstarts-campaign-to-immunize-about-1.7-million-people-against-cholera}
 }
 
 % VVVVVVVVVVVVVVV
@@ -3212,7 +3213,7 @@ ISSN={}}
     author = {Wheeler, Jesse AND Rosengart, AnnaElaine AND Jiang, Zhuoxun AND Tan, Kevin AND Treutle, Noah AND Ionides, Edward L.},
     journal = {PLOS Computational Biology},
     publisher = {Public Library of Science},
-    title = {Informing policy via dynamic models: Cholera in Haiti},
+    title = {Informing policy via dynamic models: Cholera in {H}aiti},
     year = {2024},
     xmonth = {04},
     volume = {20},
